--- a/style.css
+++ b/style.css
@@ -10,7 +10,13 @@
 
 
 .conteiner {
-    height: 100vh;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+
 
 }
 
@@ -32,7 +38,7 @@ div .config-all {
 
 .geral {
     margin: 25px;
-    margin-top: 50px;
+
 }
 
 div .btn {
