--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@ div .luxury {
         border-bottom-left-radius: 10px;
     }
 
+    .config-all p {
+        margin-bottom: 100px;
+    }
+
     #config-right {
         border-top-right-radius: 10px;
         border-bottom-left-radius: 0px;
